--- a/PostwebPortal/Views/Shared/_Layout.cshtml
+++ b/PostwebPortal/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Passage Search">Query Expansion</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Query Expansion">Url Expansion</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="UrlExpansion">Url Expansion</a>
                         </li>
 
 
