--- a/PostwebPortal/Views/Home/UrlExpansion.cshtml
+++ b/PostwebPortal/Views/Home/UrlExpansion.cshtml
@@ -8,7 +8,7 @@
 }
 
 
-<b>URL Expansion</b>
+
 
 <style>
     table {
@@ -46,45 +46,92 @@
         overflow: auto;
         display: block;
     }
-
-
-
 </style>
-
+<b>URL Expansion: </b>
 
 
 @using (Html.BeginForm("UrlExpansion", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
 
+    @if (ViewBag.IsSelected == "selected")
+    {
+        <label>Selected <input type="radio" name="isselected" value="selected" checked></label>
+        <label>None <input type="radio" name="isselected" value="none"></label>
+        <label>All <input type="radio" name="isselected" value="all"></label>
+    }
+
+    else if (ViewBag.IsSelected == "none")
+    {
+        <label>Selected <input type="radio" name="isselected" value="selected"></label>
+        <label>None <input type="radio" name="isselected" value="none" checked></label>
+        <label>All <input type="radio" name="isselected" value="all"></label>
+    }
+
+
+    else
+    {
+        <label>Selected <input type="radio" name="isselected" value="selected"></label>
+        <label>None <input type="radio" name="isselected" value="none"></label>
+        <label>All <input type="radio" name="isselected" value="all" checked></label>
+    }
     <div class="input-group mb-3" align="center">
+
+
+
+
+
+
         <table>
+
             <tr>
+
                 <td width="500"><input type="text" class="form-control" placeholder="Url" aria-label="Url" aria-describedby="basic-addon2" id="url" name="url" value="@ViewBag.Url" required></td>
-                <td width="500"><input type="text" class="form-control" placeholder="Keys Specarated by || (eg: how to||icloud)" aria-label="Keys" aria-describedby="basic-addon2" id="keys" name="keys" value="@ViewBag.Keys" ></td>
+
+                <td width="500"><input type="text" class="form-control" placeholder="Keys Specarated by || (eg: how to||icloud)" aria-label="Keys" aria-describedby="basic-addon2" id="keys" name="keys" value="@ViewBag.Keys"></td>
+
                 <td><button class="btn btn-outline-success" type="submit" name="Search">Search</button></td>
+
             </tr>
+
 
         </table>
 
+
+
+
+
+
     </div>
 }
+
+<div onclick=" save();">
+    @Html.PagedListPager((IPagedList)Model, page => Url.Action("UrlExpansion", new { page = page, url = ViewBag.Url, judgename = ViewBag.Judgename, keys = ViewBag.Keys, isselected = ViewBag.IsSelected }),
+    new X.PagedList.Mvc.Core.Common.PagedListRenderOptions
+    {
+        DisplayItemSliceAndTotal = true,
+        ContainerDivClasses = new[] { "navigation" },
+        LiElementClasses = new[] { "page-item" },
+        PageClasses = new[] { "page-link" },
+    })
+</div>
 
 @using (Html.BeginForm("QueryUpdate", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @if (ViewBag.PassageCount > 0)
     {
         <p>
-        <b>Passages : @ViewBag.PassageCount</b>
-        <b>Title: </b><a href="@ViewBag.Url" target="_blank" style="color:blue">@ViewBag.PassageTitle</a>
-        <b>URL: </b><a href="@ViewBag.Url" target="_blank" style="color:olivedrab">@ViewBag.Url</a>
-            </p>
+            <b>Passages : @ViewBag.PassageCount</b>
+            <b>Title: </b><a href="@ViewBag.Url" target="_blank" style="color:blue">@ViewBag.PassageTitle</a>
+            <b>URL: </b><a href="@ViewBag.Url" target="_blank" style="color:olivedrab">@ViewBag.Url</a>
+        </p>
 
 
-        <table style="table-layout:auto; width:100%" class="fixed_header">
+        <table style="table-layout:auto; width:100%" class="fixed_header" id="results">
             <thead>
                 <tr>
                     <th style="border-left: 1px solid; border-top: 1px solid; border-bottom: 1px solid; border-right: 1px solid; padding-top: 5px">
-                        Query  <button class="btn btn-outline-success" onclick="toggle()" name="Add">Add</button>
+                        Query  <p><input type="text" id="myInput" onkeyup="search()" placeholder="Search for queries.." title="Type in a query">
+                        <button class="btn btn-outline-success" onclick="toggle()" name="Add">Add</button></p>
                     </th>
                     @foreach (var passage in ViewBag.Passages)
                     {
@@ -92,7 +139,7 @@
 
                         <th style="border-top: 1px solid;border-bottom: 1px solid;border-right:1px solid; padding-top:5px">
                             <div class="resize" style="height: 200px; width: 400px; overflow-x: auto; overflow-y: auto">
-                                <p  style="color:blue">Total count: @passage.selectedcount</p>
+                                <p style="color:blue">Total count: @passage.selectedcount</p>
                                 <p style="color:dimgray;"><b>RootQueries : </b>@Html.Raw(passage.RootQueries)</p>
                                 <p style="color:dimgray" id="rawAnswer">@Html.Raw(passage.RawAnswer)</p>
 
@@ -134,7 +181,7 @@
                     }
                     <td>
                         <div style=" text-align:center; width: 200px; overflow-x: auto; overflow-y: auto;">
-                            <button class="btn btn-outline-success" onclick="addQuery()"> Add </button>
+                            <button  onclick="addQuery()"> Add </button>
                         </div>
                     </td>
 
@@ -158,8 +205,9 @@
                             <td style="text-align:left  ">
                                 <div class="resize">
 
-                                    @Html.DisplayTextFor(m => m[i].pwquery)
-
+                                    <a href="https://www.google.com/search?q=@Model[i].pwquery" target="_blank" style="color:blue">
+                                        @Html.DisplayTextFor(m => m[i].pwquery)
+                                    </a>
                                     @Html.HiddenFor(m => m[i].queryid)
 
 
@@ -222,33 +270,33 @@
 
                 }
             </tbody>
-            </table>
+        </table>
 
 
 
 
 
 
-            <input type="hidden" class="form-control" name="url" id=url value=@ViewBag.url>
-            <input type="hidden" class="form-control" name="page" id=url value=@ViewBag.page>
-            <div style="text-align:right">
-                <input type="text" placeholder="judgename" aria-label="judgename" aria-describedby="basic-addon2" id="judgename" name="judgename" value="@ViewBag.Judgename" required>
-                <button class="btn btn-outline-success" type="submit" name="Submit">Save</button>
-            </div>
-        }
+        <input type="hidden" class="form-control" name="url" id=url value=@ViewBag.url>
+        <input type="hidden" class="form-control" name="page" id=url value=@ViewBag.page>
+        <div style="text-align:right">
+            <input type="text" placeholder="judgename" aria-label="judgename" aria-describedby="basic-addon2" id="judgename" name="judgename" value="@ViewBag.Judgename" required>
+            <button class="btn btn-outline-success" type="submit" name="Submit">Save</button>
+        </div>
     }
+}
 
 
-    <div onclick=" save();">
-        @Html.PagedListPager((IPagedList)Model, page => Url.Action("UrlExpansion", new { page = page, url = ViewBag.Url, judgename = ViewBag.Judgename, keys = ViewBag.Keys }),
-        new X.PagedList.Mvc.Core.Common.PagedListRenderOptions
-        {
-            DisplayItemSliceAndTotal = true,
-            ContainerDivClasses = new[] { "navigation" },
-            LiElementClasses = new[] { "page-item" },
-            PageClasses = new[] { "page-link" },
-        })
-    </div>
+<div onclick=" save();">
+    @Html.PagedListPager((IPagedList)Model, page => Url.Action("UrlExpansion", new { page = page, url = ViewBag.Url, judgename = ViewBag.Judgename, keys = ViewBag.Keys, isselected = ViewBag.IsSelected }),
+    new X.PagedList.Mvc.Core.Common.PagedListRenderOptions
+    {
+        DisplayItemSliceAndTotal = true,
+        ContainerDivClasses = new[] { "navigation" },
+        LiElementClasses = new[] { "page-item" },
+        PageClasses = new[] { "page-link" },
+    })
+</div>
 
 }
 
@@ -394,6 +442,25 @@
             document.getElementById("hidethis").style.display = 'table-row'; // set to table-row instead of an empty string
         } else {
             document.getElementById("hidethis").style.display = 'none';
+        }
+    }
+
+    function search() {
+        var input, filter, table, tr, td, i, txtValue;
+        input = document.getElementById("myInput");
+        filter = input.value.toUpperCase();
+        table = document.getElementById("results");
+        tr = table.getElementsByTagName("tr");
+        for (i = 0; i < tr.length; i++) {
+            td = tr[i].getElementsByTagName("td")[0];
+            if (td) {
+                txtValue = td.textContent || td.innerText;
+                if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                    tr[i].style.display = "";
+                } else {
+                    tr[i].style.display = "none";
+                }
+            }
         }
     }
 
