--- a/PostwebPortal/Views/Home/UrlExpansion.cshtml
+++ b/PostwebPortal/Views/Home/UrlExpansion.cshtml
@@ -48,7 +48,13 @@
     }
 </style>
 <b>URL Expansion: </b>
-
+<div align="right">    
+Welcome @ViewBag.Judgename 
+    <form asp-action="SignOut" asp-controller="Home">
+        <button  class="btn btn-outline-success" type="submit">Sign Out</button>
+    </form>
+    </div>
+    
 
 @using (Html.BeginForm("UrlExpansion", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
@@ -105,7 +111,7 @@
 }
 
 <div onclick=" save();">
-    @Html.PagedListPager((IPagedList)Model, page => Url.Action("UrlExpansion", new { page = page, url = ViewBag.Url, judgename = ViewBag.Judgename, keys = ViewBag.Keys, isselected = ViewBag.IsSelected }),
+    @Html.PagedListPager((IPagedList)Model, page => Url.Action("UrlExpansion", new { page = page, url = ViewBag.Url, keys = ViewBag.Keys, isselected = ViewBag.IsSelected }),
     new X.PagedList.Mvc.Core.Common.PagedListRenderOptions
     {
         DisplayItemSliceAndTotal = true,
@@ -131,7 +137,7 @@
                 <tr>
                     <th style="border-left: 1px solid; border-top: 1px solid; border-bottom: 1px solid; border-right: 1px solid; padding-top: 5px">
                         Query  <p><input type="text" id="myInput" onkeyup="search()" placeholder="Search for queries.." title="Type in a query">
-                        <button class="btn btn-outline-success" onclick="toggle()" name="Add">Add</button></p>
+                        <button class="btn btn-outline-success" type="button" onclick="toggle()" name="Add">Add</button></p>
                     </th>
                     @foreach (var passage in ViewBag.Passages)
                     {
@@ -181,7 +187,7 @@
                     }
                     <td>
                         <div style=" text-align:center; width: 200px; overflow-x: auto; overflow-y: auto;">
-                            <button  onclick="addQuery()"> Add </button>
+                            <button class="btn btn-outline-success"  onclick="addQuery()"> Add </button>
                         </div>
                     </td>
 
@@ -280,15 +286,14 @@
         <input type="hidden" class="form-control" name="url" id=url value=@ViewBag.url>
         <input type="hidden" class="form-control" name="page" id=url value=@ViewBag.page>
         <div style="text-align:right">
-            <input type="text" placeholder="judgename" aria-label="judgename" aria-describedby="basic-addon2" id="judgename" name="judgename" value="@ViewBag.Judgename" required>
-            <button class="btn btn-outline-success" type="submit" name="Submit">Save</button>
+        <button class="btn btn-outline-success" type="submit" name="Submit">Save</button>
         </div>
     }
 }
 
 
 <div onclick=" save();">
-    @Html.PagedListPager((IPagedList)Model, page => Url.Action("UrlExpansion", new { page = page, url = ViewBag.Url, judgename = ViewBag.Judgename, keys = ViewBag.Keys, isselected = ViewBag.IsSelected }),
+    @Html.PagedListPager((IPagedList)Model, page => Url.Action("UrlExpansion", new { page = page, url = ViewBag.Url, keys = ViewBag.Keys, isselected = ViewBag.IsSelected }),
     new X.PagedList.Mvc.Core.Common.PagedListRenderOptions
     {
         DisplayItemSliceAndTotal = true,
@@ -408,7 +413,6 @@
     function addQuery(){
 
         var queries = document.getElementById("queries").value;
-        var judgename = document.getElementById("judgename").value;
         var ele = document.getElementsByName("selectedanswerid");
         var answerid;
         for (i = 0; i < ele.length; i++) {
@@ -424,12 +428,9 @@
         if (!queries) {
             alert("queries cannot be left blank");
         }
-        else if (!judgename) {
-            alert("judgename cannot be left blank");
-        }
         else {
             var url = '@Url.Action("AddQuery")';
-            url += '/?queries=' + queries + '&judgename=' + judgename + '&selectedanswerid=' + answerid + '&page=' + '@ViewBag.page' + '&keys=' + '@ViewBag.keys' + '&url=' + '@ViewBag.url';
+            url += '/?queries=' + queries + '&selectedanswerid=' + answerid + '&page=' + '@ViewBag.page' + '&keys=' + '@ViewBag.keys' + '&url=' + '@ViewBag.url';
             window.location.href = url;
         }
 
